Kubernetes/frontend/armadacar/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: armadacar-deployment
  namespace: armadacar
spec:
  replicas: 2
  selector:
    matchLabels:
      app: armadacar
      component: pod
  template:
    metadata:
      labels:
        app: armadacar
        component: pod
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - keycloak
            topologyKey: "kubernetes.io/hostname"
      containers:
      - image: registry.gitlab.com/startfleet/armadacar-front:release
        imagePullPolicy: Always
        name: armadacar
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: armadacar-registry-secret
