Kubernetes/frontend/armadacar/service.yml
apiVersion: v1
kind: Service
metadata:
  name: armadacar-svc
  namespace: armadacar
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: armadacar
