Kubernetes/frontend/armadacar/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: armadacar-ingress
    namespace: armadacar
    annotations:
      ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - armadacar.startfleet.ovh
    secretName: armadacar-cert-tls
  rules:
  - host: armadacar.startfleet.ovh
    http:
      paths:
      - backend:
          serviceName: armadacar-svc
          servicePort: 80
